--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenCvSharp4.Windows" Version="4.2.0.20200208" />
+  </ItemGroup>
+
 </Project>
