--- a/WorkSpace/packages.config
+++ b/WorkSpace/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
+  <package id="OpenCvSharp4" version="4.2.0.20200208" targetFramework="net461" />
+  <package id="OpenCvSharp4.runtime.win" version="4.2.0.20200208" targetFramework="net461" />
+  <package id="OpenCvSharp4.Windows" version="4.2.0.20200208" targetFramework="net461" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net461" />
   <package id="Prism.Wpf" version="7.2.0.1422" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.6.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
