--- a/AppEvents/AppEvents.csproj
+++ b/AppEvents/AppEvents.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Prism.Core" Version="7.2.0.1422" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj" />
+  </ItemGroup>
+
 </Project>
