--- a/WorkSpace/WorkSpace.csproj
+++ b/WorkSpace/WorkSpace.csproj
@@ -44,8 +44,8 @@
     <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.4\lib\net46\CommonServiceLocator.dll</HintPath>
     </Reference>
-    <Reference Include="DllsX">
-      <HintPath>D:\Documents\Tencent Files\1436631269\FileRecv\DllsX.dll</HintPath>
+    <Reference Include="Dlls">
+      <HintPath>D:\Documents\Tencent Files\1436631269\FileRecv\Dlls.dll</HintPath>
     </Reference>
     <Reference Include="OpenCvSharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenCvSharp4.4.2.0.20200208\lib\net461\OpenCvSharp.dll</HintPath>
@@ -103,9 +103,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Business\Converter.cs" />
+    <Compile Include="ViewModels\ChangeBrightViewModel.cs" />
     <Compile Include="ViewModels\ImageTabViewModel.cs" />
     <Compile Include="ViewModels\VideoTabViewModel.cs" />
     <Compile Include="ViewModels\WorkSpaceViewModel.cs" />
+    <Compile Include="Views\ChangeBright.xaml.cs">
+      <DependentUpon>ChangeBright.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ImageTab.xaml.cs">
       <DependentUpon>ImageTab.xaml</DependentUpon>
     </Compile>
@@ -131,6 +135,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="Views\ChangeBright.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ImageTab.xaml" />
     <Page Include="Views\RotateWindow.xaml">
       <SubType>Designer</SubType>
