--- a/WorkSpace/WorkSpace.csproj
+++ b/WorkSpace/WorkSpace.csproj
@@ -44,8 +44,8 @@
     <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.4\lib\net46\CommonServiceLocator.dll</HintPath>
     </Reference>
-    <Reference Include="Dlls">
-      <HintPath>D:\Documents\Tencent Files\1436631269\FileRecv\Dlls.dll</HintPath>
+    <Reference Include="Dlls%281%29">
+      <HintPath>D:\Documents\Tencent Files\1436631269\FileRecv\Dlls(1).dll</HintPath>
     </Reference>
     <Reference Include="OpenCvSharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenCvSharp4.4.2.0.20200208\lib\net461\OpenCvSharp.dll</HintPath>
